# hvscraft

./: CMakeLists.txt  assets.h.in
assets/shaders/: fragment.glsl  vertex.glsl
include/glad/: glad.h
include/hvsengine/: block.h  camera.h  chunk.h  mesh.h  shaders.h
src/: camera.c  chunk.c  glad.c  main.c  mesh.c  shaders.c
